--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,17 @@ dependencies:
   flutter_modular: ^4.1.2
   mobx: ^2.0.5
   flutter_mobx: ^2.0.2
+  cloud_firestore: ^2.5.4
+  firebase_core: ^1.8.0
+  firebase_core_web: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   mobx_codegen: 
   modular_test: ^1.0.1+1
+  build_runner: ^2.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -79,3 +84,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+scripts:
+  mobx: flutter pub run build_runner watch --delete-conflicting-outputs
