--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dev_dependencies:
     sdk: flutter
   mobx_codegen: 
   modular_test: ^1.0.1+1
-  build_runner: ^2.1.4
+  build_runner: 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
