--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^2.5.4
   firebase_core: ^1.8.0
   firebase_core_web: ^1.1.0
+  firebase: ^9.0.2
 
 
 dev_dependencies:
